removed horizontal scrollbar, and minor padding issues

--- a/components/Card.module.css
+++ b/components/Card.module.css
@@ -3,12 +3,11 @@
     flex-direction: column;
     border-radius: 25px;
     overflow: hidden;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.04), 0 5px 18px rgba(0, 0, 0, 0.06),
-    0 24px 83px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.04), 0 5px 18px rgba(0, 0, 0, 0.06), 0 24px 83px rgba(0, 0, 0, 0.1);
     background-color: #fff;
     max-width: 500px;
-    margin: 10px;
     transition: transform 0.3s ease;
+    box-sizing: border-box; /* Ensure padding is included in the width calculation */
   }
   
   .imageWrapper {
@@ -27,16 +26,21 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    box-sizing: border-box; /* Ensure padding is included in the width calculation */
   }
   
   .title {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     margin: 0;
+    font-weight: 800; /* Align with .introTitle */
   }
   
   .text {
     color: #555;
     margin-top: 15px;
+    line-height: 30px;
+    font-weight: 300; /* Align with .text1 */
+    font-size: var(--font-size-lg); /* Align with .paragraph */
   }
   
   .actionCallButton {
@@ -68,6 +72,21 @@
   @media screen and (max-width: 430px) {
     .actionCallButtonText {
       font-size: var(--font-size-base);
+    }
+    .text {
+      font-size: var(--font-size-base); /* Align with responsive .text1 */
+      line-height: 28px; /* Align with responsive .text1 */
+    }
+  }
+  
+  @media screen and (max-width: 744px) {
+    .text {
+      font-size: var(--font-size-base); /* Align with responsive .text1 */
+      line-height: 28px; /* Align with responsive .text1 */
+    }
+
+    .title {
+      font-size: 1.25rem;
     }
   }
   
